# clone_bug_msvc

./: CMakeLists.txt
src/: main.cpp
